# TurtleBot3_Autonomous_Navigation-

./: README.md  build.sh  run.sh  run_2.sh
diagram/: NodeDiagram.drawio
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/corridor_manual_nav/: CMakeLists.txt  package.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/corridor_manual_nav/include/: corridor_navigator.hpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/corridor_manual_nav/launch/: corridor_manual_nav.launch.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/corridor_manual_nav/src/: corridor_navigator_node.cpp  main.cpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/detection_corridor/: CMakeLists.txt  package.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/detection_corridor/include/: corridor_detector_node.hpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/detection_corridor/launch/: detection_corridor.launch.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/detection_corridor/src/: corridor_detector_main.cpp  corridor_detector_node.cpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/g4_launch/launch/: assignment_1.launch.xml  assignment_1_v2.launch.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/navigation/: CMakeLists.txt  package.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/navigation/include/: nav_goal_subscriber_node.hpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/navigation/launch/: navigation.launch.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/navigation/src/: nav_goal_subscriber_main.cpp  nav_goal_subscriber_node.cpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/obstacles_detection/: CMakeLists.txt  package.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/obstacles_detection/include/: obstacle_detector.hpp
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/obstacles_detection/launch/: obstacles_detection.launch.xml
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/obstacles_detection/msg/: CircleObstacle.msg  CircleObstaclesArray.msg
ws_turtlebot_autonomus_navigation/src/turtleBot_autonomous_navigation/obstacles_detection/src/: obstacle_detector.cpp
